GKE deployment/pod4.yml
apiVersion: v1
kind: Service
metadata:
  name: hystrix-demo-service
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "config-default"}'
spec:
  type: NodePort
  selector:
    app: hystrix-nr
  ports:
  - protocol: TCP
    port: 9090
    targetPort: 9090
