GKE deployment/pod5.yml
apiVersion: v1
kind: Service
metadata:
  name: nr-hystrix-demo-service
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "config-default"}'
spec:
  type: NodePort
  selector:
    app: nr-hystrix-demo
  ports:
  - protocol: TCP
    port: 9091
    targetPort: 9091
